# efrei-promo-2024-exercices

./: .gitignore  CMakeLists.txt  Hephaistos_liste_1_P1_main.c  Hephaistos_liste_1_main.c  Hephaistos_tree_1_main.c  README.md  SSL.h  TD1_main.c  TD2_main.c  TD3_main.c  doubleLinkedList.c  index.md  simpleLinkedList.c  test_DLL.c
Semestre 2 - C - WIP/: CMakeLists.txt  main.c
Semestre 2 - C - WIP/session 2/: session 2.c  session 2.h
Semestre 2 - C - WIP/session 3/: session 3.c  session 3.h
Semestre 2 - C - WIP/session 4/: session 4.c  session 4.h
Semestre 2 - C - WIP/session 5/: Date.c  Date.h  README.txt  classroom.c  classroom.h  fileinteractions.c  fileinteractions.h  main.c  student.c  student.h
Semestre 3 - C/: CMakeLists.txt
Semestre 3 - C/hephaistos/: index.md
Semestre 3 - C/hephaistos/Arbre-1/: one-3.h  two-3.c
Semestre 3 - C/hephaistos/Arbre-2/: onefour.c  onefour.h  threefour.c  threefour.h  twofour.c  twofour.h
Semestre 3 - C/hephaistos/Liste-1/: one.h  three.h  two.c  two.h
Semestre 3 - C/hephaistos/Liste-2/: one-2.c
Semestre 3 - C/old/: Hephaistos_liste_1_main.c  Hephaistos_tree_1_main.c  test_DLL.c
Semestre 3 - C/old/lib/CircledLinkedList/: circledLinkedList.c
Semestre 4 - Java - Web/ Web/semaine 1/: EX4.html  menu.html  old  seance 1.html  styleTP1.css
Semestre 4 - Java - Web/ Web/semaine 2/: semaine 2.rar
Semestre 4 - Java - Web/ Web/semaine 2/Part 1/ex 1/: index.html
Semestre 4 - Java - Web/ Web/semaine 2/Part 1/ex 2/: index.html
Semestre 4 - Java - Web/ Web/semaine 2/Part 1/ex 2/css/: style.css
Semestre 4 - Java - Web/ Web/semaine 2/Part 2/: partie II.html
Semestre 4 - Java - Web/ Web/semaine 2/Part 2/css/: style.css
Semestre 4 - Java - Web/ Web/semaine 3/: README.txt  index.html  semaine 3.7z
Semestre 4 - Java - Web/ Web/semaine 3/css/: style.css
Semestre 4 - Java - Web/ Web/semaine 3/js/: script.js
Semestre 4 - Java - Web/ Web/semaine 4/: index.html
Semestre 4 - Java - Web/ Web/semaine 4/css/: style.css
Semestre 4 - Java - Web/ Web/semaine 4/js/: script.js
Semestre 4 - Java - Web/Java/: .gitignore
Semestre 4 - Java - Web/Java/src/com/tdz/zhou/: Main.java  Point.java  Segment.java  Vehicle.java
Semestre 6 - Java - Web - OS/CAR/: arithmetics.asm  dchr.asm  dstr.asm  mat1.asm  mat2.asm  menu.asm  qus1.asm  qus2.asm  qus3.asm  string.asm
Semestre 6 - Java - Web - OS/Java/: .gitignore
Semestre 6 - Java - Web - OS/JavaLab1/: .gitignore  settings.gradle
Semestre 6 - Java - Web - OS/JavaLab1/src/main/java/zhou/: CardPay.java  CashPay.java  Invoice.java  Payable.java  SaleOrder.java  (+1 more)
Semestre 6 - Java - Web - OS/JavaLab1/src/test/java/: LabExamTest.java
Semestre 6 - Java - Web - OS/OS/: CMakeLists.txt
Semestre 6 - Java - Web - OS/OS/src/: FCFS.cpp  FCFS.h  Main.c  Main.cpp  SJF.cpp  SJF.h
Semestre 6 - Java - Web - OS/OS/src/prof/: DeadlockAvoidance.c  DeadlockAvoidance.h  FCFS.c  FCFS.h  IndexedFileAllocation.c  IndexedFileAllocation.h  LRU.c  LRU.h  MVT.c  MVT.h  MVVT.c  MVVT.h  MultiProgrammingWithFixedTask.c  MultiProgrammingWithFixedTask.h  SJF.c  SJF.h
Semestre 6 - Java - Web - OS/Web/ContactBookSystem/: index.html
Semestre 6 - Java - Web - OS/Web/ContactBookSystem/pages/: search.php  view.php
Semestre 6 - Java - Web - OS/Web/ContactBookSystem/src/: admin.php  index.php  login.html  register.html  view.php
Semestre 6 - Java - Web - OS/Web/ContactBookSystem/src/db/: insert.php  update.php
Semestre 6 - Java - Web - OS/Web/ContactBookSytem-Lab-9-to-13/: add.html  edit.php  search.php
Semestre 6 - Java - Web - OS/Web/ContactBookSytem-Lab-9-to-13/db/: conn.php  delete.php  insert.php
Semestre 6 - Java - Web - OS/Web/ContactBookSytem-Lab-9-to-13/db/user/: login.php
Semestre 6 - Java - Web - OS/Web/Lab8/BasicOption/: BasicOption.php
Semestre 6 - Java - Web - OS/Web/Lab8/FormValidation/: FormValidationResults.php
Semestre 6 - Java - Web - OS/Web/Lab8/MilesKilometresConvertor/: MilesKilometresForm.php  MilesKilometresResult.php
Semestre 6 - Java - Web - OS/Web/Lab8/TemperatureConversion/: TemperatureConversionForm.php  TemperatureConversionResult.php
Semestre 6 - Java - Web - OS/Web/Lab9/BasicFormProcessing/: Form.php  FormProcessing.php
Semestre 6 - Java - Web - OS/Web/Lab9/FormValidation/: FormValidation.php
hephaistos/: Element.c  Element.h  index.md  one.c  one.h  three.c  three.h  two.c  two.h
hephaistos/Arbre-1/: one-3.c  one-3.h  three-3.c  three-3.h  two-3.h
hephaistos/Arbre-2/: onefour.c  onefour.h  threefour.c
hephaistos/Liste-1/: one.c  three.c
hephaistos/Liste-2/: one-2.h  two-2.c  two.h
lib/: CLL.h  DLL.h  Hephaistos.c  Hephaistos.h  Hephaistos_tree_1_main.c  SLL.h  SSL.h  circledLinkedList.c  doubleLinkedList.c  simpleLinkedList.c  stack.c  stack.h  tree.c  tree.h
lib/CircledLinkedList/: CLL.h
lib/SimpleLinkedList/: SLL.h  simpleLinkedList.c
lib/Stack/: Stack.c  Stack.h
lib/Tree/: tree.c  tree.h
(+60 files in other folders)
